# ProxyGen

./: .clang-format  README.md
Voxelize/: CMakeLists.txt
Voxelize/lib/: CMakeLists.txt  SimpleMesh.cpp  SimpleMesh.h  VoxelGrid.cpp  VoxelGrid.h  mathkit.h  tribox3.h
Voxelize/src/: GltfUtil.cpp  GltfUtil.h  SimpleMesh.cpp  SimpleMesh.h  SphereSet.cpp  Texture.cpp  Texture.h  VoxelGrid.cpp  VoxelGrid.h  Voxelize.cpp  main.cpp  mathkit.h  tribox3.h
assets/: .gitignore
assets/Avocado/: README.md
assets/Barrel/: barrel.gltf
assets/BoomBox/: README.md
assets/Bunny/: bunny.gltf  bunny_lowres.gltf
assets/Cube/: README.md
assets/ExampleVox/: .gitignore
assets/Sphere/: capsule.gltf  double_sphere.gltf  sphere.gltf
code/: .gitignore  CMakeLists.txt
code/lib/: GltfUtil.cpp  SimpleMesh.cpp  SimpleMesh.h  Sphere.h  Texture.cpp  Texture.h  VoxelGrid.cpp  VoxelGrid.h  mathkit.h
code/src/: BoundedSphereSet.cpp  SphereSet.cpp  VoxelContours.cpp  Voxelize.cpp
